update cron_jobs, apis /download-stock-candle and format src code
